@@ -18,6 +18,7 @@ lib/
 lib64/
 parts/
 sdist/
+tmp/
 var/
 *.egg-info/
 .installed.cfg
