@@ -4,7 +4,7 @@ can run from the command line with the stdin from these files.
 
 For example, under Msys or Unix this would be:
 ```
-OTCmd2 -P '/c/Program Files/MetaTrader'  < tests/OTCmd2-0.test
+OTCmd2 -P "/c/Program Files/MetaTrader"  < tests/OTCmd2-0.test
 ```
 
 You should see no assertion errors,  and you should see no timeouts.
